src/modules/cluster/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podummy
  namespace: podummy
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: app.podummy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podummy
                port:
                  number: 80
